--- a/.github/workflows/tus-pre-create-hook-cd-dev.yml
+++ b/.github/workflows/tus-pre-create-hook-cd-dev.yml
@@ -2,12 +2,14 @@ name: "Tus Pre-Create Hook CD Dev"
 
 on:
   workflow_dispatch:
-  pull_request:
+  push:
+    branches:
+      - main
     paths:
       - tus/file-hooks/metadata-verify/**
 
 jobs:
   dev:
-    uses: ./.github/workflows/tus-hooks-cd-template.yml
+    uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
       WORKFLOW: tus-pre-create-hook-cd-dev.yml
