--- a/.github/workflows/tus-pre-create-hook-remote-cd-dev.yml
+++ b/.github/workflows/tus-pre-create-hook-remote-cd-dev.yml
@@ -13,3 +13,4 @@ jobs:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
       WORKFLOW: tus-pre-create-hook-cd-dev.yml
+    secrets: inherit
