--- a/.github/workflows/cosmos-sync-function-app-remote-cd-dev.yml
+++ b/.github/workflows/cosmos-sync-function-app-remote-cd-dev.yml
@@ -13,3 +13,4 @@ jobs:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
       WORKFLOW: cosmos-sync-function-app-cd-dev.yml
+    secrets: inherit
