--- a/.github/workflows/tus-post-receive-hook-remote-cd-dev.yml
+++ b/.github/workflows/tus-post-receive-hook-remote-cd-dev.yml
@@ -13,3 +13,4 @@ jobs:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
       WORKFLOW: tus-post-receive-hook-cd-dev.yml
+    secrets: inherit
