--- a/.github/workflows/remote-cd-trigger-template.yml
+++ b/.github/workflows/remote-cd-trigger-template.yml
@@ -23,7 +23,7 @@ jobs:
           sudo gem install jwt
           echo "${{ secrets.CDC_COE_BOTFREY_PEM }}" > app-private-key.pem
           chmod +x ./get-github-app-access-token.sh;
-          ./get-github-app-access-token.sh;
+          . ./get-github-app-access-token.sh;
           echo "access_token=${TOKEN}" >> "$GITHUB_ENV"
       - name: Manually Dispatch Remote CICD Trigger Event 
         uses: actions/github-script@v6
