--- a/.github/workflows/supplemental-api-function-app-ci.yml
+++ b/.github/workflows/supplemental-api-function-app-ci.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   pull_request:
     paths:
-      - supplemental-api-function-app/**
+      - 'supplemental-api-function-app/**'
 
 jobs:
   dev:
