--- a/.github/workflows/remote-cd-trigger-template.yml
+++ b/.github/workflows/remote-cd-trigger-template.yml
@@ -7,6 +7,10 @@ on:
         type: string
         description: "Workflow yml file that should be triggered."
         required: true
+      REF: 
+        type: string
+        description: "Github reference"
+        required: true
 
 jobs:
   invoke-cd-trigger:
@@ -34,5 +38,5 @@ jobs:
                   owner: 'cdcent',
                   repo: 'data-exchange-upload-devops',
                   workflow_id: '${{ inputs.WORKFLOW }}',
-                  ref: 'main'
+                  ref: '${{ inputs.REF }}'
                 })
