--- a/.github/workflows/remote-cd-trigger-template.yml
+++ b/.github/workflows/remote-cd-trigger-template.yml
@@ -11,7 +11,7 @@ on:
         type: string
         description: "Git tag or branch the workflow is running on."
         required: false
-        default: "main"
+        default: 'main'
 
 jobs:
   invoke-cd-trigger:
@@ -41,6 +41,6 @@ jobs:
                   workflow_id: '${{ inputs.WORKFLOW }}',
                   ref: main
                   inputs: {
-                    DATA_EXCHANGE_UPLOAD_TAG: ${{ inputs.REF }}
+                    DATA_EXCHANGE_UPLOAD_REF: ${{ inputs.REF }}
                   }
                 })
