--- a/supplemental-api-function-app/build.gradle
+++ b/supplemental-api-function-app/build.gradle
@@ -13,6 +13,12 @@ plugins {
 apply plugin: "java"
 apply plugin: "kotlin"
 
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
 group "gov.cdc.ocio"
 version "1.0.0-SNAPSHOT"
 
