--- a/.github/workflows/tus-post-receive-hook-ci.yml
+++ b/.github/workflows/tus-post-receive-hook-ci.yml
@@ -11,9 +11,7 @@ defaults:
     working-directory: tus/file-hooks/upload-status
 
 jobs:
-  dev:
+  run-tests:
     uses: ./.github/workflows/tus-hooks-ci-template.yml
     with:
-      HOOK_NAME: post-receive
-      WORKING_DIRECTORY: tus/file-hooks/upload-status
-      BUILD_SCRIPT: podman-build-pre-create-bin.sh  
+      WORKING_DIRECTORY: tus/file-hooks/upload-status 
