--- a/supplemental-api-function-app/build.gradle
+++ b/supplemental-api-function-app/build.gradle
@@ -26,9 +26,14 @@ dependencies {
     implementation "com.microsoft.azure.functions:azure-functions-java-library:3.0.0"
     implementation "com.azure:azure-cosmos:4.41.0"
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.14.2"
-    testImplementation "org.mockito:mockito-core:5.2.0"
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.9.2"
+    //testImplementation "org.mockito:mockito-core:3.7.7"
+    testImplementation("org.mockito.kotlin:mockito-kotlin:4.0.0")
+    //testImplementation "org.junit.jupiter:junit-jupiter-api:5.9.2"
+    testImplementation "org.testng:testng:7.4.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    testImplementation "org.mockito:mockito-inline:3.11.2"
+    testImplementation "io.mockk:mockk:1.12.0"
+
 }
 
 sourceCompatibility = "1.8"
@@ -36,6 +41,14 @@ targetCompatibility = "1.8"
 
 repositories {
     mavenCentral()
+}
+
+test {
+    useTestNG()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+    // Set the test classpath, if required
 }
 
 azurefunctions {
