--- a/supplemental-api-function-app/build.gradle
+++ b/supplemental-api-function-app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     testImplementation "org.mockito:mockito-inline:3.11.2"
     testImplementation "io.mockk:mockk:1.12.0"
 
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-layout-template-json', version: '2.21.0'
 }
 
 sourceCompatibility = "1.8"
@@ -61,4 +62,3 @@ azurefunctions {
         type = 'azure_cli'
     }
 }
-
