--- a/supplemental-api-function-app/src/main/resources/log4j2.properties
+++ b/supplemental-api-function-app/src/main/resources/log4j2.properties
@@ -1,2 +1,2 @@
-appender.console.layout.type = JsonTemplateLayout
-appender.console.layout.eventTemplateUri = classpath:EcsLayout.json
+appender.console.layout.type=JsonTemplateLayout
+appender.console.layout.eventTemplateUri=classpath:EcsLayout.json
