--- a/supplemental-api-function-app/src/main/resources/log4j2.properties
+++ b/supplemental-api-function-app/src/main/resources/log4j2.properties
@@ -1,3 +1,4 @@
 appender.console.type = Console
+appender.console.name = consoleLogger
 appender.console.layout.type=JsonTemplateLayout
 appender.console.layout.eventTemplateUri=classpath:EcsLayout.json
