--- a/supplemental-api-function-app/build.gradle
+++ b/supplemental-api-function-app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     testImplementation "org.mockito:mockito-inline:3.11.2"
     testImplementation "io.mockk:mockk:1.12.0"
 
+    implementation 'io.github.microutils:kotlin-logging-jvm:2.0.11'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.6'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-layout-template-json', version: '2.21.0'
 }
 
