--- a/supplemental-api-function-app/build.gradle
+++ b/supplemental-api-function-app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     testImplementation "org.mockito:mockito-inline:3.11.2"
     testImplementation "io.mockk:mockk:1.12.0"
 
-    implementation 'io.github.microutils:kotlin-logging-jvm:2.0.11'
+    implementation group: 'io.github.microutils', name: 'kotlin-logging-jvm', version: '3.0.5'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.11'
     implementation group: 'ch.qos.logback.contrib', name: 'logback-json-classic', version: '0.1.5'
     implementation group: 'ch.qos.logback.contrib', name: 'logback-jackson', version: '0.1.5'
