--- a/supplemental-api-function-app/build.gradle
+++ b/supplemental-api-function-app/build.gradle
@@ -15,7 +15,7 @@ apply plugin: "kotlin"
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = "1.8"
     }
 }
 
@@ -35,14 +35,15 @@ dependencies {
     testImplementation "io.mockk:mockk:1.12.0"
 
     implementation group: 'io.github.microutils', name: 'kotlin-logging-jvm', version: '3.0.5'
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.11'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.11'
     implementation group: 'ch.qos.logback.contrib', name: 'logback-json-classic', version: '0.1.5'
     implementation group: 'ch.qos.logback.contrib', name: 'logback-jackson', version: '0.1.5'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.3'
 }
 
-sourceCompatibility = "11"
-targetCompatibility = "11"
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
 
 repositories {
     mavenCentral()
