--- a/supplemental-api-function-app/build.gradle
+++ b/supplemental-api-function-app/build.gradle
@@ -15,7 +15,7 @@ apply plugin: "kotlin"
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "11"
     }
 }
 
@@ -42,8 +42,11 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.3'
 }
 
-sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
+java {
+    toolchain.languageVersion.set(JavaLanguageVersion.of(11))
+}
+// sourceCompatibility = "1.8"
+// targetCompatibility = "1.8"
 
 repositories {
     mavenCentral()
@@ -57,13 +60,23 @@ test {
     // Set the test classpath, if required
 }
 
-azurefunctions {
-    subscription = System.getProperty("subscription")
-    resourceGroup = System.getProperty("resourceGroup")
-    appName = System.getProperty("appName")
-    allowTelemetry = false
+// azurefunctions {
+//     subscription = System.getProperty("subscription")
+//     resourceGroup = System.getProperty("resourceGroup")
+//     appName = System.getProperty("appName")
+//     allowTelemetry = false
 
-    auth {
-        type = 'azure_cli'
+//     auth {
+//         type = 'azure_cli'
+//     }
+// }
+
+azurefunctions {
+    resourceGroup = 'ocio-ede-dev-moderate-hl7-rg'
+    appName = 'ocio-ede-dev-supplemental-api'
+    
+    runtime {
+      os = 'mac'
     }
+    localDebug = "transport=dt_socket,server=y,suspend=n,address=5005"
 }
