--- a/supplemental-api-function-app/build.gradle
+++ b/supplemental-api-function-app/build.gradle
@@ -15,7 +15,7 @@ apply plugin: "kotlin"
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = "1.8"
     }
 }
 
@@ -45,8 +45,9 @@ dependencies {
 java {
     toolchain.languageVersion.set(JavaLanguageVersion.of(11))
 }
-// sourceCompatibility = "1.8"
-// targetCompatibility = "1.8"
+
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
 
 repositories {
     mavenCentral()
@@ -60,23 +61,23 @@ test {
     // Set the test classpath, if required
 }
 
-// azurefunctions {
-//     subscription = System.getProperty("subscription")
-//     resourceGroup = System.getProperty("resourceGroup")
-//     appName = System.getProperty("appName")
-//     allowTelemetry = false
-
-//     auth {
-//         type = 'azure_cli'
-//     }
-// }
-
 azurefunctions {
-    resourceGroup = 'ocio-ede-dev-moderate-hl7-rg'
-    appName = 'ocio-ede-dev-supplemental-api'
-    
-    runtime {
-      os = 'mac'
+    subscription = System.getProperty("subscription")
+    resourceGroup = System.getProperty("resourceGroup")
+    appName = System.getProperty("appName")
+    allowTelemetry = false
+
+    auth {
+        type = 'azure_cli'
     }
-    localDebug = "transport=dt_socket,server=y,suspend=n,address=5005"
 }
+
+// azurefunctions {
+//     resourceGroup = 'ocio-ede-dev-moderate-hl7-rg'
+//     appName = 'ocio-ede-dev-supplemental-api'
+    
+//     runtime {
+//       os = 'mac'
+//     }
+//     localDebug = "transport=dt_socket,server=y,suspend=n,address=5005"
+// }
