--- a/supplemental-api-function-app/src/main/resources/log4j.properties
+++ b/supplemental-api-function-app/src/main/resources/log4j.properties
@@ -1,1 +1,3 @@
 log4j.rootLogger = DEBUG
+appender.console.layout.type = JsonTemplateLayout
+appender.console.layout.eventTemplateUri = classpath:EcsLayout.json
