--- a/supplemental-api-function-app/build.gradle
+++ b/supplemental-api-function-app/build.gradle
@@ -34,15 +34,15 @@ dependencies {
     testImplementation "org.mockito:mockito-inline:3.11.2"
     testImplementation "io.mockk:mockk:1.12.0"
 
-    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-layout-template-json
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-layout-template-json', version: '2.21.0'
-
     implementation group: 'io.github.microutils', name: 'kotlin-logging-jvm', version: '3.0.5'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.11'
     implementation group: 'ch.qos.logback.contrib', name: 'logback-json-classic', version: '0.1.5'
     implementation group: 'ch.qos.logback.contrib', name: 'logback-jackson', version: '0.1.5'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.3'
+
+    implementation group: 'com.microsoft.azure', name: 'applicationinsights-core', version: '3.4.17'
+    //implementation group: 'com.microsoft.azure', name: 'applicationinsights-runtime-attach', version: '3.4.17'
 }
 
 sourceCompatibility = "1.8"
