--- a/cosmos-sync-function-app/build.gradle
+++ b/cosmos-sync-function-app/build.gradle
@@ -25,11 +25,16 @@ version '1.0.0-SNAPSHOT'
 dependencies {
     implementation 'com.microsoft.azure.functions:azure-functions-java-library:3.0.0'
     implementation 'com.azure:azure-cosmos:4.42.0'
-    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.12.1'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.14.2'
     implementation 'com.google.code.gson:gson:2.10.1'
-    testImplementation 'org.mockito:mockito-core:2.23.4'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
+    //testImplementation 'org.mockito:mockito-core:3.7.7'
+    //testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    testImplementation "io.mockk:mockk:1.12.0"
+    testImplementation "org.testng:testng:7.4.0"
+    testImplementation "org.mockito:mockito-inline:3.11.2"
+    testImplementation("org.mockito.kotlin:mockito-kotlin:4.0.0")
+
 }
 
 sourceCompatibility = '1.8'
@@ -37,6 +42,14 @@ targetCompatibility = '1.8'
 
 repositories {
     mavenCentral()
+}
+
+test {
+    useTestNG()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+    // Set the test classpath, if required
 }
 
 azurefunctions {
