--- a/supplemental-api-function-app/build.gradle
+++ b/supplemental-api-function-app/build.gradle
@@ -22,11 +22,9 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 group "gov.cdc.ocio"
 version "1.0.0-SNAPSHOT"
 
-dependencies {
-    implementation "com.azure:azure-storage-blob:12.24.1"
-    implementation "com.microsoft.azure.functions:azure-functions-java-library:3.0.0"
-    implementation "com.azure:azure-cosmos:4.42.0"
-    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.14.2"
+dependencies {    
+    implementation "com.microsoft.azure.functions:azure-functions-java-library:3.0.0"    
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.15.3"
     implementation group: 'io.github.microutils', name: 'kotlin-logging-jvm', version: '3.0.5'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.11'
@@ -34,14 +32,14 @@ dependencies {
     implementation group: 'ch.qos.logback.contrib', name: 'logback-jackson', version: '0.1.5'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.3'
 
-    //testImplementation "org.mockito:mockito-core:3.7.7"
+    implementation "com.azure:azure-cosmos:4.41.0"
+    implementation "com.azure:azure-storage-blob:12.24.1"
+
     testImplementation("org.mockito.kotlin:mockito-kotlin:4.0.0")
-    //testImplementation "org.junit.jupiter:junit-jupiter-api:5.9.2"
     testImplementation "org.testng:testng:7.4.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testImplementation "org.mockito:mockito-inline:3.11.2"
     testImplementation "io.mockk:mockk:1.12.0"
-
 }
 
 sourceCompatibility = "1.8"
@@ -64,5 +62,8 @@ azurefunctions {
     resourceGroup = System.getProperty("resourceGroup")
     appName = System.getProperty("appName")
     allowTelemetry = false
-}
 
+     auth {
+        type = 'azure_cli'
+    }
+}
