--- a/upload-processor/BulkFileUploadFunctionAppTest/BulkFileUploadFunctionAppTest.csproj
+++ b/upload-processor/BulkFileUploadFunctionAppTest/BulkFileUploadFunctionAppTest.csproj
@@ -20,7 +20,7 @@
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BulkFileUploadFunctionApp.csproj" />
+    <ProjectReference Include="../BulkFileUploadFunctionApp/BulkFileUploadFunctionApp.csproj" />
   </ItemGroup>
 
 </Project>
