--- a/.github/workflows/tus-hooks-ci-template.yml
+++ b/.github/workflows/tus-hooks-ci-template.yml
@@ -18,5 +18,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install Dependencies
+        run: python3 -m pip install -r requirements.txt
       - name: Run Unit Tests
         run: python3 -m unittest discover -v
