--- a/.github/workflows/deploy-rc-staging.yml
+++ b/.github/workflows/deploy-rc-staging.yml
@@ -10,6 +10,6 @@ jobs:
   staging:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
-      WORKFLOW: function-app-rc.yml
+      WORKFLOW: deploy-rc-stg.yml
       REF: '${{ github.ref_name }}'  # Resolves to the tag that is pushed
     secrets: inherit
