--- a/.github/workflows/deploy-rc-tst.yml
+++ b/.github/workflows/deploy-rc-tst.yml
@@ -1,4 +1,4 @@
-name: "Deploy Release Candidate - Staging"
+name: "TST - Deploy Release Candidate"
 
 on:
   workflow_dispatch:
@@ -10,6 +10,6 @@ jobs:
   staging:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
-      WORKFLOW: deploy-rc-stg.yml
+      WORKFLOW: deploy-rc-tst.yml
       REF: '${{ github.ref_name }}'  # Resolves to the tag that is pushed
     secrets: inherit
