--- a/upload-processor/BulkFileUploadFunctionAppTest/BulkFileUploadFunctionAppTest.csproj
+++ b/upload-processor/BulkFileUploadFunctionAppTest/BulkFileUploadFunctionAppTest.csproj
@@ -13,8 +13,9 @@
     <PackageReference Include="AzureFunctions.TestHelpers" Version="4.0.101" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-    <PackageReference Include="Moq" Version="4.20.69" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
