--- a/.github/workflows/upload-processor-ci.yml
+++ b/.github/workflows/upload-processor-ci.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   pull_request:
     paths:
-      - upload-processor/BulkFileUploadFunctionApp/**
+      - upload-processor/**
 
 jobs:
   build:
@@ -22,3 +22,19 @@ jobs:
           dotnet-version: '6.0.x'
       - name: Build with Dotnet
         run: dotnet build
+  test:
+    name: "test"
+    needs: build
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: upload-processor/BulkFileUploadFunctionAppTest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Dotnet
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '7.0.x'
+      - name: Test with Dotnet
+        run: dotnet test
