Upload 983/ps api int tests (#227)
* boilerplate kotlin project

* simple test working with testng

* clients for auth and upload

* uploads a file given required metadata

* tests for required fields

* verifies trace created after upload

* tests for metadata verify span object

* splitting tests into two groups

* test for metadata verify report

* tests for happy path metadata verify reports

* fix typo

* happy path for upload status reports

* small cleanup for metadata verify error tests

* util function for getting test file

* default env var to system vars

* env config rename

* throw when sams response empty

* remove TODO

--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,7 @@ tus/file-hooks/post-create/post_create_bin.spec
 
 # Java
 **/.gradle
+**/local.properties
 tests/integration/java/build/
 tests/integration/java/bin
+tests/integration/kotlin/build/
