--- a/upload-processor/BulkFileUploadFunctionApp/BulkFileUploadFunctionApp.csproj
+++ b/upload-processor/BulkFileUploadFunctionApp/BulkFileUploadFunctionApp.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.7.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+    <PackageReference Include="Microsoft.FeatureManagement" Version="3.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
   <ItemGroup>
