--- a/spikes/v2experimental/tusd-go-server/.gitignore
+++ b/spikes/v2experimental/tusd-go-server/.gitignore
@@ -1,5 +1,8 @@
 .vscode
 
+# local uploads folder
+uploads
+
 # ref: https://raw.githubusercontent.com/github/gitignore/main/Go.gitignore
 
 # If you prefer the allow list template instead of the deny list, see community template:
