--- a/upload-processor/BulkFileUploadFunctionApp/BulkFileUploadFunctionApp.csproj
+++ b/upload-processor/BulkFileUploadFunctionApp/BulkFileUploadFunctionApp.csproj
@@ -9,8 +9,9 @@
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.10.4" />
     <PackageReference Include="Azure.Messaging.EventGrid" Version="4.14.1" />
-    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.8.1" />
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.15.0" />
+    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.11.0" />
+    <PackageReference Include="Azure.Messaging.EventHubs.Processor" Version="5.11.0" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.22.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
     <PackageReference Include="Microsoft.Azure.AppConfiguration.Functions.Worker" Version="7.0.0" />
