--- a/.github/workflows/remote-cd-trigger-template.yml
+++ b/.github/workflows/remote-cd-trigger-template.yml
@@ -40,6 +40,6 @@ jobs:
                   workflow_id: '${{ inputs.WORKFLOW }}',
                   ref: 'main',
                   inputs: {
-                    DATA_EXCHANGE_UPLOAD_REF: '${{ inputs.REF }}'
+                    REF: '${{ inputs.REF }}'
                   }
                 })
