--- a/spikes/v2experimental/tusd-go-server/.gitignore
+++ b/spikes/v2experimental/tusd-go-server/.gitignore
@@ -1,7 +1,8 @@
 .vscode
 
 # local uploads folder
-uploads
+uploads/*
+!uploads/readme.md
 
 # ref: https://raw.githubusercontent.com/github/gitignore/main/Go.gitignore
 
