v2 go local upload folder from config and line up ui input meta

--- a/spikes/v2experimental/tusd-go-server/configs/local/local.env
+++ b/spikes/v2experimental/tusd-go-server/configs/local/local.env
@@ -12,3 +12,6 @@ METADATA_VERSIONS=[v1]
 ALLOWED_DEST_AND_EVENTS_PATH="../../../../tus/file-hooks/metadata-verify/allowed_destination_and_events.json"
 DEFINITIONS_PATH="../../../../tus/file-hooks/metadata-verify/"
 UPLOAD_CONFIG_PATH="../../../../upload-configs/"
+
+# LOCAL
+LOCAL_FOLDER_UPLOADS=../uploads
