v2 go changes for local locker, todo cloud

--- a/spikes/v2experimental/tusd-go-server/configs/local/local.env
+++ b/spikes/v2experimental/tusd-go-server/configs/local/local.env
@@ -15,3 +15,6 @@ UPLOAD_CONFIG_PATH="../../../../upload-configs/"
 
 # LOCAL
 LOCAL_FOLDER_UPLOADS=../uploads
+
+# TUSD 
+TUSD_CONFIG_BASE_PATH=/files/
