v2 go copy local A -> B

--- a/spikes/v2experimental/tusd-go-server/.gitignore
+++ b/spikes/v2experimental/tusd-go-server/.gitignore
@@ -1,8 +1,12 @@
 .vscode
 
-# local uploads folder
+# local uploads folders
 uploads/*
 !uploads/readme.md
+uploads_b/*
+!uploads_b/readme.md
+uploads_c/*
+!uploads_c/readme.md
 
 # ref: https://raw.githubusercontent.com/github/gitignore/main/Go.gitignore
 
