--- a/spikes/v2experimental/tusd-go-server/configs/local/local.env
+++ b/spikes/v2experimental/tusd-go-server/configs/local/local.env
@@ -15,6 +15,8 @@ UPLOAD_CONFIG_PATH="../../../../upload-configs/"
 
 # LOCAL
 LOCAL_FOLDER_UPLOADS=../uploads
+LOCAL_FOLDER_UPLOADS_B=../uploads_b 
+LOCAL_FOLDER_UPLOADS_C=../uploads_c 
 
 # TUSD 
 TUSD_HANDLER_BASE_PATH=/files/
