v2 go docker file and copied configs

--- a/spikes/v2experimental/tusd-go-server/.gitignore
+++ b/spikes/v2experimental/tusd-go-server/.gitignore
@@ -3,10 +3,8 @@
 # local uploads folders
 uploads/*
 !uploads/readme.md
-uploads_b/*
-!uploads_b/readme.md
-uploads_c/*
-!uploads_c/readme.md
+!uploads/uploads_b/readme.md
+!uploads/uploads_c/readme.md
 
 # ref: https://raw.githubusercontent.com/github/gitignore/main/Go.gitignore
 
