--- a/spikes/v2experimental/tusd-go-server/configs/local/local.env
+++ b/spikes/v2experimental/tusd-go-server/configs/local/local.env
@@ -9,14 +9,14 @@ SERVER_PORT=8080
 
 # METADATA v1
 METADATA_VERSIONS=[v1]
-ALLOWED_DEST_AND_EVENTS_PATH="../../../../tus/file-hooks/metadata-verify/allowed_destination_and_events.json"
-DEFINITIONS_PATH="../../../../tus/file-hooks/metadata-verify/"
-UPLOAD_CONFIG_PATH="../../../../upload-configs/"
+ALLOWED_DEST_AND_EVENTS_PATH="./configs/allowed_destination_and_events.json"
+DEFINITIONS_PATH="./configs/file-hooks/metadata-verify/"
+UPLOAD_CONFIG_PATH="./configs/upload-configs/"
 
 # LOCAL
-LOCAL_FOLDER_UPLOADS=../uploads
-LOCAL_FOLDER_UPLOADS_B=../uploads_b 
-LOCAL_FOLDER_UPLOADS_C=../uploads_c 
+LOCAL_FOLDER_UPLOADS=./uploads
+LOCAL_FOLDER_UPLOADS_B=./uploads/uploads_b 
+LOCAL_FOLDER_UPLOADS_C=./uploads/uploads_c 
 
 # TUSD 
 TUSD_HANDLER_BASE_PATH=/files/
