v2 go local uploads folders

--- a/spikes/v2experimental/tusd-go-server/.gitignore
+++ b/spikes/v2experimental/tusd-go-server/.gitignore
@@ -3,7 +3,13 @@
 # local uploads folders
 uploads/*
 !uploads/readme.md
+
+!uploads/uploads_b 
+uploads/uploads_b/*
 !uploads/uploads_b/readme.md
+
+!uploads/uploads_c
+uploads/uploads_c/*
 !uploads/uploads_c/readme.md
 
 # ref: https://raw.githubusercontent.com/github/gitignore/main/Go.gitignore
