v2 go refactor store copier prep for azure

--- a/spikes/v2experimental/tusd-go-server/configs/local/local.env
+++ b/spikes/v2experimental/tusd-go-server/configs/local/local.env
@@ -14,9 +14,8 @@ DEFINITIONS_PATH="./configs/file-hooks/metadata-verify/"
 UPLOAD_CONFIG_PATH="./configs/upload-configs/"
 
 # LOCAL
-LOCAL_FOLDER_UPLOADS=./uploads
-LOCAL_FOLDER_UPLOADS_B=./uploads/uploads_b 
-LOCAL_FOLDER_UPLOADS_C=./uploads/uploads_c 
+LOCAL_FOLDER_UPLOADS_TUS=./uploads
+LOCAL_FOLDER_UPLOADS_A=./uploads/uploads_a
 
 # TUSD 
 TUSD_HANDLER_BASE_PATH=/files/
