v2 go store changes to interface for local and for azure prep

--- a/spikes/v2experimental/tusd-go-server/.gitignore
+++ b/spikes/v2experimental/tusd-go-server/.gitignore
@@ -4,13 +4,9 @@
 uploads/*
 !uploads/readme.md
 
-!uploads/uploads_b 
-uploads/uploads_b/*
-!uploads/uploads_b/readme.md
-
-!uploads/uploads_c
-uploads/uploads_c/*
-!uploads/uploads_c/readme.md
+!uploads/uploads_a
+uploads/uploads_a/*
+!uploads/uploads_a/readme.md
 
 # ref: https://raw.githubusercontent.com/github/gitignore/main/Go.gitignore
 
