--- a/spikes/v2experimental/tusd-go-server/configs/local/local.env
+++ b/spikes/v2experimental/tusd-go-server/configs/local/local.env
@@ -20,3 +20,6 @@ LOCAL_FOLDER_UPLOADS_A=./uploads/uploads_a
 
 # TUSD 
 TUSD_HANDLER_BASE_PATH=/files/
+
+# Processing Status
+PROCESSING_STATUS_URI=https://www.cdc.gov/
