v2 go added ps health check stub

--- a/spikes/v2experimental/tusd-go-server/configs/local/local.env
+++ b/spikes/v2experimental/tusd-go-server/configs/local/local.env
@@ -21,5 +21,5 @@ LOCAL_FOLDER_UPLOADS_A=./uploads/uploads_a
 # TUSD 
 TUSD_HANDLER_BASE_PATH=/files/
 
-# Processing Status
+# Processing Status TODO: replace processing status uri
 PROCESSING_STATUS_URI=https://www.cdc.gov/
