--- a/spikes/v2experimental/tusd-go-server/configs/local/local.env
+++ b/spikes/v2experimental/tusd-go-server/configs/local/local.env
@@ -23,3 +23,4 @@ TUSD_HANDLER_BASE_PATH=/files/
 
 # Processing Status TODO: replace processing status uri
 PROCESSING_STATUS_HEALTH_URI=https://www.cdc.gov/
+# PROCESSING_STATUS_SERVICE_BUS_URI=TODO
