v2 go moved get blob name to func and copy retry part 1

--- a/spikes/v2experimental/tusd-go-server/configs/local/local.env
+++ b/spikes/v2experimental/tusd-go-server/configs/local/local.env
@@ -23,4 +23,8 @@ TUSD_HANDLER_BASE_PATH=/files/
 
 # Processing Status TODO: replace processing status uri
 PROCESSING_STATUS_HEALTH_URI=https://www.cdc.gov/
-# PROCESSING_STATUS_SERVICE_BUS_URI=TODO
+PROCESSING_STATUS_SERVICE_BUS_URI=TODO
+
+# COPY Retry, delay in ms
+COPY_RETRY_TIMES=3
+COPY_RETRY_DELAY=500 
