v2 go manifest v1 add v2 fields, hydrate

--- a/spikes/v2experimental/tusd-go-server/configs/local/local.env
+++ b/spikes/v2experimental/tusd-go-server/configs/local/local.env
@@ -13,6 +13,7 @@ METADATA_VERSIONS=[v1]
 ALLOWED_DEST_AND_EVENTS_PATH="./configs/allowed_destination_and_events.json"
 DEFINITIONS_PATH="./configs/file-hooks/metadata-verify/"
 UPLOAD_CONFIG_PATH="./configs/upload-configs/"
+HYDRATE_V1_CONFIG_PATH="./configs/upload-configs/v2/"
 
 # LOCAL
 LOCAL_FOLDER_UPLOADS_TUS=./uploads
