--- a/.github/workflows/tus-v2-ci.yml
+++ b/.github/workflows/tus-v2-ci.yml
@@ -23,4 +23,6 @@ jobs:
           go-version: 1.22.0
       # You can test your matrix by printing the current Go version
       - name: Run Tests
-        run: go test ./...
+        run: go test -coverprofile=c.out ./...
+      - name: Show coverage
+        run: go tool cover -func=c.out
