--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -23,6 +23,6 @@ jobs:
           go-version: 1.22.0
       # You can test your matrix by printing the current Go version
       - name: Run Tests
-        run: go test -coverprofile=c.out $(go list ./... | grep -v /experimental/)
+        run: go test -coverprofile=c.out -coverpkg=./... ./testing
       - name: Show coverage
         run: go tool cover -func=c.out
