--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -21,8 +21,11 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.22.0
-      # You can test your matrix by printing the current Go version
+      - name: Vet
+        run: go vet ./...
       - name: Run Tests
         run: go test -coverprofile=c.out -coverpkg=./... ./testing
       - name: Show coverage
         run: go tool cover -func=c.out
+      - name: Build Check
+        run: go build -o upload-server ./cmd/main.go
