Correct local upload-config path

--- a/upload-server/configs/local/local.env
+++ b/upload-server/configs/local/local.env
@@ -12,7 +12,7 @@ ENVIRONMENT=DEV
 METADATA_VERSIONS=[v1]
 ALLOWED_DEST_AND_EVENTS_PATH="./configs/allowed_destination_and_events.json"
 DEFINITIONS_PATH="./configs/file-hooks/metadata-verify/"
-UPLOAD_CONFIG_PATH="./configs/upload-configs/"
+UPLOAD_CONFIG_PATH="../upload-configs/"
 HYDRATE_V1_CONFIG_PATH="./configs/upload-configs/v2/"
 
 # LOCAL
@@ -31,4 +31,3 @@ PROCESSING_STATUS_SERVICE_BUS_QUEUE=TODO
 # COPY Retry, delay in ms
 COPY_RETRY_TIMES=3
 COPY_RETRY_DELAY=500 
-
