Standardizing the azure env vars

--- a/upload-server/docker-compose.yml
+++ b/upload-server/docker-compose.yml
@@ -15,16 +15,12 @@ services:
       - .:/code
     working_dir: /code
     environment:
-      - TUS_AZ_STORAGE_NAME=devstoreaccount1
-      - TUS_AZ_STORAGE_KEY=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==
-      - TUS_AZ_CONTAINER_NAME=test
-      - TUS_AZ_CONTAINER_ENDPOINT=http://azurite:10000/devstoreaccount1
-      - TUS_AZ_CONTAINER_ACCESS_TYPE=container
-      - DEX_AZ_STORAGE_NAME=devstoreaccount1
-      - DEX_AZ_STORAGE_KEY=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==
-      - DEX_AZ_CONTAINER_NAME=config
-      - DEX_AZ_CONTAINER_ENDPOINT=http://azurite:10000/devstoreaccount1
+      - AZURE_STORAGE_ACCOUNT=devstoreaccount1
+      - AZURE_STORAGE_KEY=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==
+      - AZURE_ENDPOINT=http://azurite:10000/devstoreaccount1
+      - TUS_AZURE_CONTAINER_NAME=test
+      - DEX_MANIFEST_CONFIG_CONTAINER_NAME=config
       - PODMAN_CI_TESTS=true
-    command: go test --tags=integration -v -coverprofile=c.out -coverpkg=./... ./cmd
+    command: go test --tags=integration -coverprofile=c.out -coverpkg=./... ./cmd
     depends_on:
       - azurite
