Create sane defaults for app configuration (#308)
* Create sane defaults for app configuration

* Standardizing the azure env vars

* Remove test azurite key

--- a/upload-server/Dockerfile
+++ b/upload-server/Dockerfile
@@ -17,9 +17,7 @@ FROM alpine:latest
 WORKDIR /app 
 
 COPY --from=builder /app/dextusd .
-COPY --from=builder /app/configs ./configs  
-COPY --from=builder /app/uploads ./uploads 
 
 EXPOSE 8080
 
-CMD ["./dextusd", "-env", "local_to_azure"]
+CMD ["./dextusd"]
