Renamed workflow and updated reference to CDCent file

--- a/.github/workflows/upload-server.yml
+++ b/.github/workflows/upload-server.yml
@@ -12,6 +12,6 @@ jobs:
   remote-trigger:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
-      WORKFLOW: upload-v2.yml
+      WORKFLOW: upload-server.yml
     secrets: inherit
 
