Describe your changes here

--- a/tests/smoke/kotlin/src/test/resources/properties/dextesting-testevent1/dextesting-testevent1.properties
+++ b/tests/smoke/kotlin/src/test/resources/properties/dextesting-testevent1/dextesting-testevent1.properties
@@ -1,3 +1,12 @@
+# V1
 filename=10KB-test-file
 meta_destination_id=dextesting
 meta_ext_event=testevent1
+
+# V2
+#received_filename=10KB-test-file
+#data_stream_id=dextesting
+#data_stream_route=testevent1
+#sender_id=SID
+#data_producer_id=DP
+#jurisdiction=Atlanta
