fix filename char tests and event case sensitivity

--- a/tests/smoke/kotlin/src/test/resources/properties/aims-celr-hl7/invalid-filename.properties
+++ b/tests/smoke/kotlin/src/test/resources/properties/aims-celr-hl7/invalid-filename.properties
@@ -1,3 +1,11 @@
-filename=1<0>K:B"-/t\\e|s?t*-file
+filename=test-/file
 meta_destination_id=aims-celr
 meta_ext_event=hl7
+meta_ext_objectkey=null
+meta_ext_filename=test-/file
+meta_ext_file_timestamp=null
+meta_username=test-automation
+meta_ext_filestatus=null
+meta_ext_uploadid=null
+meta_ext_source=null
+meta_organization=null
