--- a/tests/smoke/kotlin/src/test/resources/properties/daart-hl7/invalid-filename.properties
+++ b/tests/smoke/kotlin/src/test/resources/properties/daart-hl7/invalid-filename.properties
@@ -1,3 +1,8 @@
-filename=1<0>K:B"-/t\\e|s?t*-file
+filename=test-/file
 meta_destination_id=daart
 meta_ext_event=hl7
+meta_ext_source=INTEGRATION-TEST
+original_filename=test-/file
+message_type=ELR
+route=DAART
+reporting_jurisdiction=null
