--- a/tests/smoke/kotlin/src/test/resources/properties/dex-hl7-hl7ingress/dex-hl7-hl7ingress.properties
+++ b/tests/smoke/kotlin/src/test/resources/properties/dex-hl7-hl7ingress/dex-hl7-hl7ingress.properties
@@ -7,6 +7,6 @@ meta_username=test-automation
 original_filename=10KB-test-file
 original_file_timestamp=null
 message_type=CASE
-#message_type=ELR
 meta_data_stream_id=dex-hl7
+route=COVID19_ELR
 
