--- a/tests/smoke/kotlin/src/test/resources/properties/ndlp-aplhistoricaldata/invalid-filename.properties
+++ b/tests/smoke/kotlin/src/test/resources/properties/ndlp-aplhistoricaldata/invalid-filename.properties
@@ -1,3 +1,3 @@
-filename=1<0>K:B"-/t\\e|s?t*-file
+filename=test-/file
 meta_destination_id=ndlp
-meta_ext_event=aplhistoricaldata
+meta_ext_event=aplHistoricalData
