--- a/tests/smoke/kotlin/src/test/resources/properties/ndlp-covidallmonthlyvaccination/invalid-filename.properties
+++ b/tests/smoke/kotlin/src/test/resources/properties/ndlp-covidallmonthlyvaccination/invalid-filename.properties
@@ -1,3 +1,10 @@
-filename=1<0>K:B"-/t\\e|s?t*-file
+filename=test-/file
 meta_destination_id=ndlp
-meta_ext_event=covidallmonthlyvaccination
+meta_ext_event=covidallmonthlyVaccination
+meta_ext_source=IZGW
+meta_ext_sourceversion=V2023-09-01
+meta_ext_entity=AKA
+meta_username=test-automation
+meta_ext_objectkey=null
+meta_ext_filename=null
+meta_ext_submissionperiod=null
