Removed PS API calls, TRACE/SPAN feature flag and PS API calls, replaced PROC_STAT_REPORT feature flag code to use ServiceBusClient and added BulkSvcBusClient interface - wip

--- a/upload-processor/BulkFileUploadFunctionAppTest/BulkFileUploadFunctionAppTest.csproj
+++ b/upload-processor/BulkFileUploadFunctionAppTest/BulkFileUploadFunctionAppTest.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.17.5" />
     <PackageReference Include="AzureFunctions.TestHelpers" Version="4.0.101" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
