--- a/upload-processor/BulkFileUploadFunctionApp/BulkFileUploadFunctionApp.csproj
+++ b/upload-processor/BulkFileUploadFunctionApp/BulkFileUploadFunctionApp.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Azure.Messaging.EventGrid" Version="4.14.1" />
     <PackageReference Include="Azure.Messaging.EventHubs" Version="5.11.0" />
     <PackageReference Include="Azure.Messaging.EventHubs.Processor" Version="5.11.0" />
+    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.17.5" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.22.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
