tweak manifests and lowercase file prefix

--- a/tests/smoke/kotlin/src/test/resources/properties/ndlp-covidallmonthlyvaccination/ndlp-covidallmonthlyvaccination.properties
+++ b/tests/smoke/kotlin/src/test/resources/properties/ndlp-covidallmonthlyvaccination/ndlp-covidallmonthlyvaccination.properties
@@ -6,5 +6,5 @@ meta_ext_sourceversion=V2023-09-01
 meta_ext_entity=AKA
 meta_username=test-automation
 meta_ext_objectkey=null
-meta_ext_filename=null
+meta_ext_filename=10KB-test-file
 meta_ext_submissionperiod=null
