--- a/tests/smoke/kotlin/src/test/resources/properties/ndlp-routineimmunization/invalid-filename.properties
+++ b/tests/smoke/kotlin/src/test/resources/properties/ndlp-routineimmunization/invalid-filename.properties
@@ -6,5 +6,5 @@ meta_ext_sourceversion=V2022-12-31
 meta_ext_entity=AKA
 meta_username=test-automation
 meta_ext_objectkey=null
-meta_ext_filename=null
+meta_ext_filename=test-/file
 meta_ext_submissionperiod=null
