--- a/tests/smoke/kotlin/src/test/resources/properties/ndlp-rsvprevention/invalid-filename.properties
+++ b/tests/smoke/kotlin/src/test/resources/properties/ndlp-rsvprevention/invalid-filename.properties
@@ -6,6 +6,6 @@ meta_ext_sourceversion=V2023-09-01
 meta_ext_entity=AKA
 meta_username=test-automation
 meta_ext_objectkey=null
-meta_ext_filename=null
+meta_ext_filename=test-/file
 meta_ext_submissionperiod=null
 meta_data_stream_id=ndlp
