Quickfix/smoke test upload status (#343)
* search for dex-upload-status stage name instead of dex-upload

* initial test for file info

* test for file not found

* fix filename char tests and event case sensitivity

* tweak manifests and lowercase file prefix

* fix pulsenet use case

--- a/tests/smoke/kotlin/src/test/resources/properties/ndlp-covidbridgevaccination/invalid-filename.properties
+++ b/tests/smoke/kotlin/src/test/resources/properties/ndlp-covidbridgevaccination/invalid-filename.properties
@@ -1,3 +1,10 @@
-filename=1<0>K:B"-/t\\e|s?t*-file
+filename=test/-file
 meta_destination_id=ndlp
-meta_ext_event=covidbridgevaccination
+meta_ext_event=covidbridgeVaccination
+meta_ext_source=IZGW
+meta_ext_sourceversion=V2023-09-01
+meta_ext_entity=AKA
+meta_username=test-automation
+meta_ext_objectkey=null
+meta_ext_filename=test/-file
+meta_ext_submissionperiod=null
