--- a/tests/smoke/kotlin/src/test/resources/properties/ndlp-influenzavaccination/invalid-filename.properties
+++ b/tests/smoke/kotlin/src/test/resources/properties/ndlp-influenzavaccination/invalid-filename.properties
@@ -1,3 +1,10 @@
-filename=1<0>K:B"-/t\\e|s?t*-file
+filename=test-/file
 meta_destination_id=ndlp
-meta_ext_event=influenzavaccination
+meta_ext_event=influenzaVaccination
+meta_ext_source=IZGW
+meta_ext_sourceversion=V2022-12-31
+meta_ext_entity=AKA
+meta_username=test-automation
+meta_ext_objectkey=null
+meta_ext_filename=test-/file
+meta_ext_submissionperiod=null
