UPLOAD-1662 fixed an issue with the docker-compose file, updated the error message when the Redis locker fails to initializ, added a Ping to the new Redis locker function so that the connection is checked on start up and start up fails if the service is down.

--- a/upload-server/docker-compose.yml
+++ b/upload-server/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     image: redis:alpine
     restart: always
     ports:
-      - '6379:6379'
+      - "6379:6379"
     command: redis-server
   upload-server-integration:
     image: golang:alpine
@@ -28,7 +28,10 @@ services:
       - TUS_AZURE_CONTAINER_NAME=test
       - DEX_MANIFEST_CONFIG_CONTAINER_NAME=config
       - PODMAN_CI_TESTS=true
-      - TUS_REDIS_LOCK_URI=redis://redispw@cache:6379
+      - REDIS_CONNECTION_STRING=redis://redispw@cache:6379
+    ports:
+      - "8080:8080"
+    # command: go run ./...
     command: go test --tags=integration -coverprofile=c.out -coverpkg=./... ./cmd
     depends_on:
       - azurite
